2010-05-05  Ojan Vafai  <ojan@chromium.org>

Reviewed by Darin Adler.

        shift+click on an existing selection doesn't work right
        https://bugs.webkit.org/show_bug.cgi?id=36542

        NSTextView behavior is to move the end of the selection
        closest to the shift-click. Win/Linux behavior is to always
        move the focus end of the selection.

        * editing/selection/script-tests/shift-click.js: Added.
        (shiftClick):
        (assertSelectionString):
        * editing/selection/shift-click-expected.txt: Added.
        * editing/selection/shift-click.html: Added.
        * platform/win/editing/selection/shift-click-expected.txt: Added.
2010-05-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Darin Adler.

        shift+click on an existing selection doesn't work right
        https://bugs.webkit.org/show_bug.cgi?id=36542

        NSTextView behavior is to move the end of the selection
        closest to the shift-click. Win/Linux behavior is to always
        move the focus end of the selection.

        Test: editing/selection/shift-click.html

        * page/EventHandler.cpp:
        (WebCore::textDistance):
        (WebCore::EventHandler::handleMousePressEventSingleClick):

git-svn-id: svn://svn.chromium.org/blink/trunk@58892 bbb929c8-8fbe-4397-9dbb-9b2b20218538